update file structure and readme

--- a/tests/core/epub-content-docs/xhtml-content-documents/xhtml-requirements/html-serialization-001.html
+++ b/tests/core/epub-content-docs/xhtml-content-documents/xhtml-requirements/html-serialization-001.html
@@ -3,7 +3,7 @@
 <head>
 <title>HTML Serialization 001</title>
 <meta name="help" href="https://w3c.github.io/epub-specs/epub33/core/#sec-xhtml-req"/>
-<meta name="flags" content="HTMLonly"/>
+<meta name="flags" content="HTMLonly invalid"/>
 <meta name="assert" content="This test checks if a reading system supports a content document using the HTML serialization of HTML5." />
 </head>
 <body>
