Tidy up test template

--- a/tests/reading-systems/XX-Test-Template/epub-template/OPS/content_001.xhtml
+++ b/tests/reading-systems/XX-Test-Template/epub-template/OPS/content_001.xhtml
@@ -1,13 +1,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="en">
-<head>
-<title>Title TK</title>
-</head>
-<body>
-
-
-<p>Test passes if…</p>
-
-
-
-</body>
+  <head>
+    <title>Title</title>
+  </head>
+  <body>
+    <p>Test passes if...</p>
+  </body>
 </html>
