Add test for package with implicit dir="auto"
Note that this test fails in Apple Books and Play Books (web), which are the only places I've tested.

--- a/tests/reading-systems/03_Package-Document-Processing/confreq-rs-pkg-dir-auto/OPS/content_001.xhtml
+++ b/tests/reading-systems/03_Package-Document-Processing/confreq-rs-pkg-dir-auto/OPS/content_001.xhtml
@@ -4,7 +4,8 @@
   </head>
   <body>
     <p>Test passes if the title, creator, and description (if visible) flow text from right to left and put punctuation to
-    the left of expected English positions (this is an English package file with <code>&lt;package ... dir="rtl"&gt;</code>
-    set).</p>
+    the left of expected English positions (this is a package file with no <code>dir</code> attribute set on
+    <code>&lt;package&gt;</code>, but Arabic text at the beginning of each of the elements listed above, which should invoke
+    RTL as <code>dir="auto"</code>).</p>
   </body>
 </html>
