Incorporated the reporting mechanism

--- a/tests/package-title-dir-rtl-006/OPS/content_001.xhtml
+++ b/tests/package-title-dir-rtl-006/OPS/content_001.xhtml
@@ -1,7 +1,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="en">
 
 <head>
-    <title>Package Title Direction RTL 001</title>
+    <title>Package Title Direction RTL 006</title>
     <meta charset="utf-8"/>
 </head>
 
@@ -9,7 +9,7 @@
 
     <p>Test passes if the book title in the RS interface displays as follows:</p>
 
-    <p style="padding-left: 3em;"><span lang="he" dir="rtl">CSS: הרפתקה חדשה!</span></p>
+    <p style="padding-left: 3em;" dir="ltr"><span lang="he" dir="rtl">CSS: הרפתקה חדשה!</span></p>
 
     <p>(Note: that is a correct rendering of the text.)</p>
 
