Added the creators to the results

--- a/results/tests.html
+++ b/results/tests.html
@@ -11,7 +11,7 @@
 				wgPublicList: "public-epub3",
 				specStatus: "base",
 				noRecTrack: true,
-				publishDate: "2021-09-21",
+				publishDate: "2021-09-22",
 				shortName: "epub-tests",
 				edDraftURI: "https://w3c.github.io/epub-tests/results/",
                 copyrightStart: "2021",
@@ -45,7 +45,7 @@
 	</head>
 	<body>
 		<section id="abstract">
-			<p>Description of the EPUB 3.3 tests</p>
+			<p>Description of the EPUB 3.3 tests.</p>
 		</section>
 		<section id="sotd"></section>
 
@@ -61,9 +61,19 @@
 				<li>References to the normative statements or sections in the EPUB 3 specification that this test is relevant to</li>
 				<li>Pointer to the (consolidated) implementation status of the test in the separate <a href="index.html">implementation report file</a></li>
 			</ol>
+
+
 		</section>
 
 		<section data-include='fragments/tests.html' data-include-replace='true'></section>
+
+		<section class=appendix>
+			<h2>Acknowledgements</h2>
+
+			<p>The following experts contributed to the test suite:</p>
+
+			<ul data-include='fragments/creators.html' data-include-replace='true'></ul>	
+		</section>
 
 	</body>
 </html>
