--- a/results/index.html
+++ b/results/index.html
@@ -11,7 +11,7 @@
 				wgPublicList: "public-epub3",
 				specStatus: "base",
 				noRecTrack: true,
-				publishDate: "2021-09-21",
+				publishDate: "2021-09-22",
 				shortName: "epub-tests-results",
 				edDraftURI: "https://w3c.github.io/epub-tests/results/",
                 copyrightStart: "2021",
@@ -46,7 +46,7 @@
 	
 	<body>
 		<section id="abstract">
-			<p>Results of EPUB Testing</p>
+			<p>Results of EPUB Testing.</p>
 		</section>
 		<section id="sotd"></section>
 
