fixing file issue

--- a/tests/fxl-properties-001/OPS/page_001.xhtml
+++ b/tests/fxl-properties-001/OPS/page_001.xhtml
@@ -9,9 +9,7 @@
 
 <h1>Fixed Layout Properties Test - Consecutive Pages</h1>
 
-<p>Page 1</p>
-
-<p>This test passes if the pages appear consecutively with no blank pages between.</p>
+<p>Page 1 - This test passes if the pages appear consecutively with no blank pages between.</p>
 
 </body>
 </html>
