Taken care of Dan's comments

--- a/tests/confreq-rs-pkg-dir_rtl-005/OPS/nav.xhtml
+++ b/tests/confreq-rs-pkg-dir_rtl-005/OPS/nav.xhtml
@@ -1,6 +1,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="en">
 <head>
-<title>Package Title Direction RTL 002</title>
+<title>Correct 'dir=rtl' on the package, wrongly overwritten by 'dir=auto' on title</title>
 </head>
 <body>
 <nav epub:type="toc">
