--- a/tests/confreq-rs-pkg-dir_rtl-004/OPS/content_001.xhtml
+++ b/tests/confreq-rs-pkg-dir_rtl-004/OPS/content_001.xhtml
@@ -1,7 +1,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="en">
 
 <head>
-    <title>Package Title Direction RTL 004</title>
+    <title>Correct 'dir=rtl' on the package</title>
     <meta charset="utf-8"/>
 </head>
 
