make spine order test more diabolical

--- a/tests/spine-order-001/OPS/nav.xhtml
+++ b/tests/spine-order-001/OPS/nav.xhtml
@@ -5,7 +5,7 @@
 <body>
 <nav epub:type="toc">
 <ol>
-<li><a href="content_001.xhtml">Link to main page</a></li>
+<li><a href="d-content_001.xhtml">Link to main page</a></li>
 </ol>
 </nav>
 </body>
