Add metadata for embedded SVG tests

--- a/tests/confreq-svg-rs-css-embed-inc/OPS/content_001.xhtml
+++ b/tests/confreq-svg-rs-css-embed-inc/OPS/content_001.xhtml
@@ -6,7 +6,7 @@
       </style>
   </head>
   <body>
-    <p>Test passes if the image below appears in green.</p>
+    <p>Test passes if the image appears in green.</p>
     <svg xmlns="http://www.w3.org/2000/svg" xml:space="preserve" width="20.4978in" height="18.0152in" version="1.1" style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd" viewBox="0 0 46296.26 40689.13" xmlns:xlink="http://www.w3.org/1999/xlink">
       <g id="Layer_x0020_1">
         <metadata id="CorelCorpID_0Corel-Layer"/>
