--- a/tests/confreq-svg-rs-css-embed-ref/OPS/content_001.xhtml
+++ b/tests/confreq-svg-rs-css-embed-ref/OPS/content_001.xhtml
@@ -6,7 +6,7 @@
     </style>
   </head>
   <body>
-    <p>Test passes if the image below appears in green. Test fails if the image appears in red (or anything other than green).</p>
+    <p>Test passes if the image appears in green. Test fails if the image appears in red.</p>
     <img src="img/001.svg" />
   </body>
 </html>
