--- a/tests/confreq-spine-nonlinear/OPS/nav.xhtml
+++ b/tests/confreq-spine-nonlinear/OPS/nav.xhtml
@@ -1,6 +1,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="en">
 <head>
-<title>Linear Reachable 001</title>
+<title>Non-Linear Spine Item is Reachable</title>
 </head>
 <body>
 <nav epub:type="toc">
