--- a/tests/confreq-spine-nonlinear/OPS/content_002.xhtml
+++ b/tests/confreq-spine-nonlinear/OPS/content_002.xhtml
@@ -1,6 +1,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="en">
   <head>
-    <title>Non-Linear Spine Item is Reachable<</title>
+    <title>Non-Linear Spine Item is Reachable</title>
   </head>
   <body>
     <p>Test passes if following the link opens this page.</p>
