Add metadata to test for navigation doc present in the spine
Also fix navigation tests in Apple Books (they require at least two links) and rename tests to _present and _absent since they are testing two aspects of the same statement.

--- a/tests/confreq-nav-spine_absent/OPS/content_001.xhtml
+++ b/tests/confreq-nav-spine_absent/OPS/content_001.xhtml
@@ -3,6 +3,6 @@
     <title>Navigation Accessible while not in Spine</title>
   </head>
   <body>
-    <p>This is a test of navigation. Test passes if you can access the navigation document, which is not in the spine.</p>
+    <p>Test passes if you can access the two links in the navigation document, which is not in the spine.</p>
   </body>
 </html>
