--- a/tests/confreq-nav-spine_absent/OPS/nav.xhtml
+++ b/tests/confreq-nav-spine_absent/OPS/nav.xhtml
@@ -5,7 +5,8 @@
 <body>
 <nav epub:type="toc">
 <ol>
-<li><a href="content_002.xhtml">Test passes if you can see this link</a></li>
+<li><a href="content_001.xhtml">Test passes if you can see two links (first link)</a></li>
+<li><a href="content_002.xhtml">Test passes if you can see two links (second link)</a></li>
 </ol>
 </nav>
 </body>
