--- a/tests/confreq-nav-activation_in-spine/OPS/nav.xhtml
+++ b/tests/confreq-nav-activation_in-spine/OPS/nav.xhtml
@@ -1,12 +1,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="en">
 <head>
-<title>Navigation Link 002</title>
+<title>Navigation Relocates Position while in Spine</title>
 </head>
 <body>
 <nav epub:type="toc">
 <ol>
+<li><a href="content_001.xhtml">1st content document</a></li>
 <li><a href="content_002.xhtml">Click to access 2nd content document</a></li>
-
 </ol>
 </nav>
 </body>
