--- a/tests/confreq-rs-pkg-creator-order/OPS/nav.xhtml
+++ b/tests/confreq-rs-pkg-creator-order/OPS/nav.xhtml
@@ -1,6 +1,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="en">
 <head>
-<title>Package Ignore Unknown Meta 001</title>
+<title>Creators Listed in Order</title>
 </head>
 <body>
 <nav epub:type="toc">
