--- a/tests/confreq-rs-pkg-spine-unknown/OPS/nav.xhtml
+++ b/tests/confreq-rs-pkg-spine-unknown/OPS/nav.xhtml
@@ -1,6 +1,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="en">
 <head>
-<title>Unknown Properties 001</title>
+<title>Spine Item with Unknown Properties</title>
 </head>
 <body>
 <nav epub:type="toc">
