update test title

--- a/tests/sec-pkg-doc-spine/OPS/nav.xhtml
+++ b/tests/sec-pkg-doc-spine/OPS/nav.xhtml
@@ -1,6 +1,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="en">
 <head>
-<title>Linear Reachable 001</title>
+<title>Spine Items in Order</title>
 </head>
 <body>
 <nav epub:type="toc">
