--- a/tests/confreq-rs-backward-epub/OPS/nav.xhtml
+++ b/tests/confreq-rs-backward-epub/OPS/nav.xhtml
@@ -1,6 +1,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="en">
 <head>
-<title>Package Version Zero</title>
+<title>Package Version Less Than 3.0</title>
 </head>
 <body>
 <nav epub:type="toc">
