give the test an even MORE descriptive name

--- a/tests/confreq-rs-data-urls/OPS/nav.xhtml
+++ b/tests/confreq-rs-data-urls/OPS/nav.xhtml
@@ -1,6 +1,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="en">
   <head>
-    <title>top-level data: URLs</title>
+    <title>Data URL does not open in top-level context</title>
   </head>
   <body>
     <nav epub:type="toc">
