Reformat several more tests

--- a/tests/confreq-rs-pkg-meta-unknown/OPS/content_001.xhtml
+++ b/tests/confreq-rs-pkg-meta-unknown/OPS/content_001.xhtml
@@ -1,6 +1,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="en">
   <head>
-    <title>Meta Tag with Unknown Property</title>
+    <title>Meta tag with unknown property</title>
   </head>
   <body>
     <p>Test passes if the EPUB opens.</p>
