--- a/tests/confreq-svg-rs-css-embed-ref/OPS/content_001.xhtml
+++ b/tests/confreq-svg-rs-css-embed-ref/OPS/content_001.xhtml
@@ -1,6 +1,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="en">
   <head>
-    <title>Title</title>
+    <title>CSS not applied to referenced SVG</title>
     <style type="text/css">
       .fil0 {fill: red !important;}
     </style>
