--- a/tests/container-default-rendition_arbitrary/OPS/content_001.xhtml
+++ b/tests/container-default-rendition_arbitrary/OPS/content_001.xhtml
@@ -1,6 +1,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="en">
   <head>
-    <title>Package in Arbitrary Directory</title>
+    <title>Package in arbitrary directory</title>
   </head>
   <body>
     <p>Test fails if you see this.</p>
