--- a/tests/confreq-spine-nonlinear/OPS/nav.xhtml
+++ b/tests/confreq-spine-nonlinear/OPS/nav.xhtml
@@ -1,12 +1,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="en">
-<head>
-<title>Non-Linear Spine Item is Reachable</title>
-</head>
-<body>
-<nav epub:type="toc">
-<ol>
-<li><a href="content_001.xhtml">Link to main page</a></li>
-</ol>
-</nav>
-</body>
+  <head>
+    <title>Non-linear spine item is reachable</title>
+  </head>
+  <body>
+    <nav epub:type="toc">
+      <ol>
+        <li><a href="content_001.xhtml">Link to main page</a></li>
+      </ol>
+    </nav>
+  </body>
 </html>
