--- a/tests/confreq-svg-rs-embed/OPS/nav.xhtml
+++ b/tests/confreq-svg-rs-embed/OPS/nav.xhtml
@@ -1,6 +1,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="en">
   <head>
-    <title>Title</title>
+    <title>SVG embedded in XHTML content</title>
   </head>
   <body>
     <nav epub:type="toc">
