Reformat two more tests

--- a/tests/title-order/OPS/content_001.xhtml
+++ b/tests/title-order/OPS/content_001.xhtml
@@ -1,8 +1,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="en">
   <head>
-    <title>First Title in Package</title>
+    <title>First title in package</title>
   </head>
   <body>
-  	<p>Test passes if the title "First Title in Package" appears before any other title in the reading system interface.</p>
+  	<p>Test passes if the title "First title in package" appears before any other title in the reading system interface.</p>
   </body>
 </html>
