--- a/tests/sec-linked-records/OPS/nav.xhtml
+++ b/tests/sec-linked-records/OPS/nav.xhtml
@@ -1,6 +1,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="en">
   <head>
-    <title>Reading System does not skip processing package metadata when a linked metadata record is present</title>
+    <title>Package processed with linked metadata record</title>
   </head>
   <body>
     <nav epub:type="toc">
