--- a/tests/confreq-rs-xml-extid/OPS/content_001.xhtml
+++ b/tests/confreq-rs-xml-extid/OPS/content_001.xhtml
@@ -4,17 +4,11 @@
    <!ENTITY xxe SYSTEM "foo.xhtml">
    ]>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="en">
-<head>
-<title>XML External Entities 001</title>
-</head>
-<body>
-
-
-<p>&xxe;</p>
-
-
-
-
-
-</body>
+  <head>
+    <title>XML external entity not resolved</title>
+  </head>
+  <body>
+  	<p>Test passes unless a failure statement follows this paragraph.</p>
+  	<p>&xxe;</p>
+  </body>
 </html>
