--- a/tests/fxl-properties_pre-pag-spreads/OPS/page_002.xhtml
+++ b/tests/fxl-properties_pre-pag-spreads/OPS/page_002.xhtml
@@ -1,15 +1,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="en">
-<head>
-<title>Fixed Layout Properties 001 - Consecutive Pages</title>
-<meta name="viewport" content="width=900, height=600" />
-<link rel="stylesheet" href="fixed.css" />
-</head>
-<body id="p2">
-    
-    
-<h1>Fixed Layout Properties Test - Consecutive Pages in Spreads</h1>
-
-<p>Page 2. This test passes if the pages appear consecutively, in spreads, with no blank pages between.</p>
-
-</body>
+  <head>
+    <title>rendition:layout pre-paginated spreads</title>
+    <meta name="viewport" content="width=900, height=600" />
+    <link rel="stylesheet" href="fixed.css" />
+  </head>
+  <body id="p2">
+    <h1>Fixed Layout Properties - Consecutive Pages in Spreads</h1>
+    <p>Page 2. This test passes if the pages appear consecutively, in spreads, with no blank pages between.</p>
+  </body>
 </html>
