Respond to @iherman's comments

--- a/tests/confreq-rs-spine-progression-default/OPS/nav.xhtml
+++ b/tests/confreq-rs-spine-progression-default/OPS/nav.xhtml
@@ -5,7 +5,10 @@
   <body>
     <nav epub:type="toc">
   	  <ol>
-  	    <li><a href="content_001.xhtml">Link to main page</a></li>
+        <li><a href="content_001.xhtml">Page 1</a></li>
+        <li><a href="content_002.xhtml">Page 2</a></li>
+        <li><a href="content_003.xhtml">Page 3</a></li>
+        <li><a href="content_004.xhtml">Page 4</a></li>
       </ol>
     </nav>
   </body>
