Update a few elements I missed

--- a/tests/pkg-relative-url/foo/BAR/nav.xhtml
+++ b/tests/pkg-relative-url/foo/BAR/nav.xhtml
@@ -1,11 +1,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="en">
   <head>
-    <title>Content in arbitrary directory</title>
+    <title>Content in relative directory</title>
   </head>
   <body>
     <nav epub:type="toc">
       <ol>
-        <li><a href="foo/content_001.xhtml">Link to main page</a></li>
+        <li><a href="qux/content_001.xhtml">Link to main page</a></li>
       </ol>
     </nav>
   </body>
