--- a/tests/pkg-relative-url/foo/BAR/qux/content_001.xhtml
+++ b/tests/pkg-relative-url/foo/BAR/qux/content_001.xhtml
@@ -1,6 +1,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="en">
   <head>
-    <title>Content in arbitrary directory</title>
+    <title>Content in relative directory</title>
   </head>
   <body>
     <p>Test passes if this page opens.</p>
