--- a/tests/nav-spine_in-spine/OPS/content_001.xhtml
+++ b/tests/nav-spine_in-spine/OPS/content_001.xhtml
@@ -1,6 +1,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="en">
   <head>
-    <title>Navigation Accessible while in Spine</title>
+    <title>Navigation accessible while in spine</title>
   </head>
   <body>
     <p>Test passes if you can access the two links in the navigation document, which is in the spine.</p>
