--- a/tests/fxl-properties-003B/OPS/page_004.xhtml
+++ b/tests/fxl-properties-003B/OPS/page_004.xhtml
@@ -1,14 +1,14 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="en">
 <head>
-<title>rendition:orientation auto</title>
+<title>rendition:orientation duplication</title>
 <meta name="viewport" content="width=900, height=600" />
 <link rel="stylesheet" href="fixed.css" />
 </head>
-<body id="p1">
+<body id="p4">
 
-<h1>rendition:orientation auto</h1>
+<h1>rendition:orientation duplication</h1>
 
-<p>Page 1. This test passes if this page appears in the orientation of the device, or orientation of the user settings.</p>
-
+<p>Page 4. This test passes if the EPUB file fails in EPUBCheck.</p>
+    
 </body>
 </html>
