--- a/tests/fxl-orientation_landscape/OPS/page_004.xhtml
+++ b/tests/fxl-orientation_landscape/OPS/page_004.xhtml
@@ -1,14 +1,14 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="en">
 <head>
-<title>rendition:orientation duplication</title>
+<title>rendition:orientation landscape</title>
 <meta name="viewport" content="width=900, height=600" />
 <link rel="stylesheet" href="fixed.css" />
 </head>
 <body id="p4">
 
-<h1>rendition:orientation duplication</h1>
+<h1>rendition:orientation landscape</h1>
 
-<p>Page 4. This test passes if the EPUB file fails in EPUBCheck.</p>
-    
+<p>Page 4. This test passes if this page appears in landscape orientation, or informs the user that the page is intended to be viewed in landscape.</p>
+
 </body>
 </html>
