--- a/tests/fxl-orientation_default/OPS/page_001.xhtml
+++ b/tests/fxl-orientation_default/OPS/page_001.xhtml
@@ -6,7 +6,7 @@
 </head>
 <body id="p1">
 
-<h1>rendition:orientation auto</h1>
+<h1>rendition:orientation default</h1>
 
 <p>Page 1. This test passes if this page appears in the default orientation of the device, or orientation of the user settings.</p>
 
