--- a/tests/fxl-orientation_duplicate/OPS/page_001.xhtml
+++ b/tests/fxl-orientation_duplicate/OPS/page_001.xhtml
@@ -1,14 +1,14 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="en">
 <head>
-<title>rendition:orientation portrait</title>
+<title>rendition:orientation duplication</title>
 <meta name="viewport" content="width=900, height=600" />
 <link rel="stylesheet" href="fixed.css" />
 </head>
 <body id="p1">
 
-<h1>rendition:orientation portrait</h1>
+<h1>rendition:orientation duplication</h1>
 
-<p>Page 1. This test passes if this page appears in portrait orientation, or informs the user that the page is intended to be viewed in portrait.</p>
+<p>Page 1. This test passes if the EPUB file fails in EPUBCheck.</p>
 
 </body>
 </html>
