--- a/tests/pkg-flow-paginated/OPS/content_001.xhtml
+++ b/tests/pkg-flow-paginated/OPS/content_001.xhtml
@@ -10,7 +10,7 @@
 		<section id="flow-010">
 			<h2>Paginated Flow</h2>
 			<p class="desc">Tests whether setting the global <code>rendition:flow</code> property to <code>paginated</code> results in
-				dynamically paginated pages. The test passes if the content in the following chapters is dynamically paginated by the reading system.</p>
+				dynamically paginated pages. The test passes if the content in the following chapters is dynamically paginated by the reading system (as opposed to scrolling vertically).</p>
 			<p><em>
 				Note: Some reading systems allow readers to manually change the flow (e.g., from dynamically
 					paginated to scrolled). Do <strong>not</strong> use these settings for this test. To pass, the reading system must adapt to the specified flow.
