--- a/tests/pkg-flow-scrolled-continuous/OPS/content_002.xhtml
+++ b/tests/pkg-flow-scrolled-continuous/OPS/content_002.xhtml
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="en" lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<title>rendition:flow set to scrolled continuous: Chapter 1</title>
+		<title>rendition:flow set to scrolled-continuous: Chapter 1</title>
 	</head>
 	<body>
 		<section>
