adding the tests

--- a/tests/fxl-page-spread_combined/OPS/page_002.xhtml
+++ b/tests/fxl-page-spread_combined/OPS/page_002.xhtml
@@ -1,10 +1,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="en">
   <head>
-    <title>TODO: Concise test title</title>
+    <title>rendition:page-spread- combined</title>
     <meta name="viewport" content="width=900, height=600" />
     <link rel="stylesheet" href="fixed.css" />
   </head>
   <body id="p2">
-  	<p>Page 2</p>
+  	<p>Page 2. This test passes if this page is displayed on the left side of a synthetic spread, and the following page is on the right side.</p>
   </body>
 </html>
