--- a/tests/fxl-page-spread_right/OPS/page_002.xhtml
+++ b/tests/fxl-page-spread_right/OPS/page_002.xhtml
@@ -1,10 +1,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="en">
   <head>
-    <title>TODO: Concise test title</title>
+    <title>rendition:page-spread- right</title>
     <meta name="viewport" content="width=900, height=600" />
     <link rel="stylesheet" href="fixed.css" />
   </head>
   <body id="p2">
-  	<p>Page 2</p>
+  	<p>Page 2. This test passes if the first page was displayed on the right side of the synthetic spread.</p>
   </body>
 </html>
