--- a/tests/fxl-spread_auto/OPS/page_004.xhtml
+++ b/tests/fxl-spread_auto/OPS/page_004.xhtml
@@ -1,10 +1,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="en">
   <head>
-    <title>TODO: Concise test title</title>
+    <title>rendition:spread auto</title>
     <meta name="viewport" content="width=900, height=600" />
     <link rel="stylesheet" href="fixed.css" />
   </head>
   <body id="p4">
-  	<p>Page 4</p>
+  	<p>Page 4. This test passes if the content is displayed either by spine item or in synthetic spreads, depending on reading system orientation or preferences.</p>
   </body>
 </html>
