--- a/tests/fxl-spread_landscape/OPS/page_004.xhtml
+++ b/tests/fxl-spread_landscape/OPS/page_004.xhtml
@@ -1,10 +1,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="en">
   <head>
-    <title>TODO: Concise test title</title>
+    <title>rendition:spread landscape</title>
     <meta name="viewport" content="width=900, height=600" />
     <link rel="stylesheet" href="fixed.css" />
   </head>
   <body id="p4">
-  	<p>Page 4</p>
+  	<p>Page 4. This test passes if page 3 appears next to this page in a synthetic spread when the reading system is in landscape orientation.</p>
   </body>
 </html>
