--- a/tests/page-layout-both/OPS/page_003.xhtml
+++ b/tests/page-layout-both/OPS/page_003.xhtml
@@ -1,10 +1,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="en">
   <head>
-    <title>TODO: Concise test title</title>
+    <title>page-layout-both</title>
     <meta name="viewport" content="width=900, height=600" />
     <link rel="stylesheet" href="fixed.css" />
   </head>
   <body id="p3">
-    <p>Page 3</p>
+    <p>Page 3. This test passes if the previous page renders as a reflowable document.</p>
   </body>
 </html>
