--- a/tests/fxl-spread_auto/OPS/page_003.xhtml
+++ b/tests/fxl-spread_auto/OPS/page_003.xhtml
@@ -5,6 +5,6 @@
     <link rel="stylesheet" href="fixed.css" />
   </head>
   <body id="p3">
-    <p>Page 3. This test passes if the content is displayed either by spine item or in synthetic spreads, depending on reading system orientation or preferences.</p>
+    <p>Page 3. This test passes if the content is displayed by spine item and in synthetic spreads, depending on reading system orientation or preferences.</p>
   </body>
 </html>
