--- a/tests/fxl-spread_default/OPS/page_002.xhtml
+++ b/tests/fxl-spread_default/OPS/page_002.xhtml
@@ -5,6 +5,6 @@
     <link rel="stylesheet" href="fixed.css" />
   </head>
   <body id="p2">
-  	<p>Page 2. This test passes if the synthetic spread behaviour matches the reading system default or preferences.</p>
+  	<p>Page 2. This test passes if the content is displayed by spine item and in synthetic spreads, depending on reading system orientation or preferences.</p>
   </body>
 </html>
