fixing reflow section in page-layout-both tests

--- a/tests/page-layout-both/OPS/page_002.xhtml
+++ b/tests/page-layout-both/OPS/page_002.xhtml
@@ -2,7 +2,7 @@
   <head>
     <title>page-layout-both</title>
     <meta name="viewport" content="width=900, height=600" />
-    <link rel="stylesheet" href="fixed.css" />
+    <link rel="stylesheet" href="reflow.css" />
   </head>
   <body id="p2">
   	<p>Page 2. This test passes if this page renders as a reflowable document.</p>
