Adding the SVG versions of the tests, plus some cosmetics

--- a/tests/scripting-epubReadingSystem-support_iframe_svg/OPS/content_001.xhtml
+++ b/tests/scripting-epubReadingSystem-support_iframe_svg/OPS/content_001.xhtml
@@ -1,6 +1,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="en">
   <head>
-    <title>epubReadingSystem object support in an iframe</title>
+    <title>epubReadingSystem object support in SVG in an iframe</title>
     <script>
       /**
        * A simple change that proves that scripting is enabled.
@@ -20,7 +20,7 @@
   <body>
     <p id="scripting_support">This Reading System does not support scripting.</p>
 
-    <iframe src="iframe_content.xhtml" width="600" height="600" style="border: solid;" title="Embedded iframe to check the availability of the epubReadingSystem object support"></iframe>
+    <iframe src="iframe_content.svg" width="800" height="800" style="border: solid;" title="Embedded iframe with SVG to check the availability of the epubReadingSystem object support"></iframe>
 
   </body>
 </html>
