--- a/tests/pub-data-urls_top-level-content/OPS/page_002.xhtml
+++ b/tests/pub-data-urls_top-level-content/OPS/page_002.xhtml
@@ -1,6 +1,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="en">
   <head>
-    <title>Data URL not opening as a Top-level Content Document</title>
+    <title>Data URL not opening as a top-level content document</title>
     <meta name="viewport" content="width=900, height=600" />
     <link rel="stylesheet" href="fixed.css" />
   </head>
