--- a/tests/scr-readingsystem-support_iframe_svg/OPS/content_001.xhtml
+++ b/tests/scr-readingsystem-support_iframe_svg/OPS/content_001.xhtml
@@ -10,7 +10,7 @@
        */ 
       function test_ers() {
         const support = document.getElementById('scripting_support');
-        support.textContent = 'This Reading System supports scripting.';
+        support.textContent = 'This reading system supports scripting.';
 
       }
 
