--- a/tests/scr-support_iframe/OPS/content_001.xhtml
+++ b/tests/scr-support_iframe/OPS/content_001.xhtml
@@ -7,7 +7,7 @@
        */ 
       function test_support() {
         const report = document.getElementById('scripting_support');
-        report.textContent = 'This Reading System supports scripting. Test passes.';
+        report.textContent = 'This reading system supports scripting. Test passes.';
       }
       window.addEventListener('load', test_support);
     </script>
