Second round of changes per Dan's comments

--- a/tests/scr-support/OPS/content_001.xhtml
+++ b/tests/scr-support/OPS/content_001.xhtml
@@ -13,6 +13,6 @@
     </script>
   </head>
   <body>
-    <p id="scripting_support">This Reading System does not support scripting. Test fails.</p>
+    <p id="scripting_support">This reading system does not support scripting. Test fails.</p>
   </body>
 </html>
