--- a/tests/scr-support_iframe/OPS/iframe_content.xhtml
+++ b/tests/scr-support_iframe/OPS/iframe_content.xhtml
@@ -13,6 +13,6 @@
     </script>
   </head>
   <body>
-    <p id="scripting_support">This Reading System does not support scripting in an iframe. Test fails.</p>
+    <p id="scripting_support">This reading system does not support scripting in an iframe. Test fails.</p>
   </body>
 </html>
