Second round of changes

--- a/tests/scr-readingsystem-support_iframe/OPS/content_001.xhtml
+++ b/tests/scr-readingsystem-support_iframe/OPS/content_001.xhtml
@@ -22,5 +22,7 @@
 
     <iframe src="iframe_content.xhtml" width="600" height="600" style="border: solid;" title="Embedded iframe to check the availability of the epubReadingSystem object support"></iframe>
 
+    <p>Note that the test relies on the availability of the <code>iframe</code> element in HTML. If no content appears above this line, this means the <code>iframe</code> is not available, and the test fails.</p>
+
   </body>
 </html>
