--- a/tests/scr-readingsystem-support_iframe/OPS/iframe_content.xhtml
+++ b/tests/scr-readingsystem-support_iframe/OPS/iframe_content.xhtml
@@ -46,7 +46,7 @@
         <li>Reading System Name: <span id="ers_name"></span></li>
         <li>Reading System Version: <span id="ers_version"></span></li>
       </ul>
-      <p>Test passes.</p>
+      <p>Test passes, unless one of the two values are set to <code>undefined</code>.</p>
     </div>
 
   </body>
