--- a/tests/scr-support_iframe/OPS/iframe_content.xhtml
+++ b/tests/scr-support_iframe/OPS/iframe_content.xhtml
@@ -1,6 +1,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="en">
   <head>
-    <title>Scripting support</title>
+    <title>Support for container-constrained scripts</title>
     <script>
       /**
        * A simple test that proves that scripting is enabled.
