Added a test for lang setting

--- a/tests/pkg-dir_pkg_non_content/OPS/content_001.xhtml
+++ b/tests/pkg-dir_pkg_non_content/OPS/content_001.xhtml
@@ -1,6 +1,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops">
   <head>
-    <title>Content document must not inherit package language/dir settings</title>
+    <title>Content document must not inherit package dir settings</title>
     <meta charset="utf-8"/>
   </head>
   <body>
