--- a/tests/pkg-lang_pkg_non_content_dir/OPS/nav.xhtml
+++ b/tests/pkg-lang_pkg_non_content_dir/OPS/nav.xhtml
@@ -1,6 +1,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="en">
   <head>
-    <title>Content document must not inherit package dir settings</title>
+    <title>Content document does not inherit package dir setting</title>
   </head>
   <body>
     <nav epub:type="toc">
