--- a/tests/nav-spine_in-spine-no-list-style/OPS/content_001.xhtml
+++ b/tests/nav-spine_in-spine-no-list-style/OPS/content_001.xhtml
@@ -3,6 +3,6 @@
     <title>TOC items ignore navigation list styling</title>
   </head>
   <body>
-    <p>Test passes if you can access the two links in the navigation document, which is in the spine.</p>
+    <p>The test passes if the reading system's rendering of the navigation does not show numbering, disregarding the <code>list-style-type</code> declared in the navigation document.</p>
   </body>
 </html>
