--- a/tests/nav-spine_in-spine-no-list-style/OPS/nav.xhtml
+++ b/tests/nav-spine_in-spine-no-list-style/OPS/nav.xhtml
@@ -5,12 +5,15 @@
 </head>
 
 <body>
+
+
+
     <nav epub:type="toc">
         <ol style="list-style-type: lower-greek">
             <li>Test passes if you can see two links: <a href="content_001.xhtml">the first link</a>, …</li>
             <li>… the <a href="content_002.xhtml">second link</a>, …</li>
         </ol>
-        <p>… and the <em>TOC in the Reading System</em> is not rendered using the lower-greek list style type.</p>
+        <p>… and although the Reading System supports CSS (which is used to display the lower-greek numbering above) the <em>Table of Content in the Reading System’s own navigation panel</em> is not rendered using that style.</p>
     </nav>
 </body>
 
