Made textual changes

--- a/tests/mo-timing-synchronization/OPS/mobydick.xhtml
+++ b/tests/mo-timing-synchronization/OPS/mobydick.xhtml
@@ -2,8 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
         <meta charset="utf-8" />
-		<title>Basic Media Overlay Test</title>
-        <!-- <link rel="stylesheet" type="text/css" href="../css/base.css" /> -->
+		<title>Basic media overlay test</title>
 	</head>
 	<body> 
     <section id="mobyexcerpt">
