--- a/tests/mo-timing-synchronization/OPS/content_001.xhtml
+++ b/tests/mo-timing-synchronization/OPS/content_001.xhtml
@@ -2,8 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
         <meta charset="utf-8" />
-		<title>Basic Media Overlay Test</title>
-        <!-- <link rel="stylesheet" type="text/css" href="../css/base.css" /> -->
+		<title>Basic media overlay test</title>
 	</head>
 	<body>
 
@@ -11,8 +10,8 @@
 
         <ol>
             <li>The Reading System provides the user with a way to turn text reading on</li>
-            <li>If turned out, the extract on the next page is read aloud by the Reading System</li>
-            <li>The text is highlighed when its text is read; at first sentence by sentence, then paragraphs by paragraphs.</li>
+            <li>If turned off, the extract on the next page is read aloud by the Reading System</li>
+            <li>The text is highlighed as audio is played.</li>
         </ol>
  
     </body>
