Changed the test description text

--- a/tests/mol-timing-synchronization/OPS/content_001.xhtml
+++ b/tests/mol-timing-synchronization/OPS/content_001.xhtml
@@ -10,8 +10,8 @@
 
         <ol>
             <li>The Reading System provides the user with a way to turn text reading on</li>
-            <li>If turned off, the extract on the next page is read aloud by the Reading System</li>
-            <li>The text is highlighed as audio is played.</li>
+            <li>If turned on, the extract on the next page is read aloud by the Reading System</li>
+            <li>The text may be highlighted as audio is played.</li>
         </ol>
  
     </body>
