--- a/tests/mol-css_classes/OPS/mobydick.xhtml
+++ b/tests/mol-css_classes/OPS/mobydick.xhtml
@@ -3,23 +3,23 @@
 	<head>
         <meta charset="utf-8" />
 		<title>Basic media overlay test with CSS styling</title>
-	</head>
-    <style>
-        .active-item {
-            background-color: #0d925f;
-            color: black;
-        }
-        .rendered-with-mo {
-            color: rgb(158,158,158);
-        }
-    </style>
+        <style>
+            .active-item {
+                background-color: #0d925f;
+                color: black;
+            }
+            .rendered-with-mo {
+                color: rgb(158,158,158);
+            }
+        </style>
+        </head>
 	<body> 
-    <section id="mobyexcerpt" class="rendered-with-mo">
+    <section id="mobyexcerpt">
         <p>
             <span id="c01w00001">Call</span>
             <span id="c01w00002">me</span>
             <span id="c01w00003">Ishmael.</span>
-            <span id="c01s0002" class="active-item">Some years ago—never mind how long precisely—having little or no money in my purse, and nothing particular to interest me on shore, I thought I would sail about a little and see the watery part of the world.</span>
+            <span id="c01s0002">Some years ago—never mind how long precisely—having little or no money in my purse, and nothing particular to interest me on shore, I thought I would sail about a little and see the watery part of the world.</span>
             <span id="c01s0003">It is a way I have of driving off the spleen and regulating the circulation.</span>
             <span id="c01s0004">Whenever I find myself growing grim about the mouth; whenever it is a damp, drizzly November in my soul; whenever I find myself involuntarily pausing before coffin warehouses, and bringing up the rear of every funeral I meet; and especially whenever my hypos get such an upper hand of me, that it requires a strong moral principle to prevent me from deliberately stepping into the street, and methodically knocking people’s hats off—then, I account it high time to get to sea as soon as I can.</span>
             <span id="c01s0005">This is my substitute for pistol and ball.</span>
