Updated the new tests with a smaller audio file

--- a/tests/mol-audio_no_clipend/OPS/content_001.xhtml
+++ b/tests/mol-audio_no_clipend/OPS/content_001.xhtml
@@ -12,7 +12,7 @@
             <li>The Reading System provides the user with a way to turn text reading on</li>
             <li>If turned on, the extract on the next page is read aloud by the Reading System</li>
             <li>If the reading system highlights the active text, then the highlight stops at the second section</li>
-            <li>The text does <em>not</em> stop at the end of the whole text, but continues until the end of the full audio recording.</li>
+            <li>The full text is read</li>
         </ol>
  
     </body>
