--- a/tests/mol-audio_no_clipbegin/OPS/content_001.xhtml
+++ b/tests/mol-audio_no_clipbegin/OPS/content_001.xhtml
@@ -2,11 +2,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
         <meta charset="utf-8" />
-		<title>Automatic start at the begining of an audio track</title>
+		<title>Automatic start at the beginning of an audio track</title>
 	</head>
 	<body>
 
-        <p>Test passes (i.e., the Reading System correcty implements the lack of a <code>clipBegin</code> attribute value) if</p>
+        <p>Test passes (i.e., the Reading System correctly implements the lack of a <code>clipBegin</code> attribute value) if</p>
 
         <ol>
             <li>The Reading System provides the user with a way to turn text reading on</li>
