--- a/tests/mol-audio_no_clipbegin/OPS/mobydick.xhtml
+++ b/tests/mol-audio_no_clipbegin/OPS/mobydick.xhtml
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
         <meta charset="utf-8" />
-		<title>Automatic start at the begining of an audio track</title>
+		<title>Automatic start at the beginning of an audio track</title>
     </head>
 	<body> 
     <section id="mobyexcerpt">
