--- a/tests/mol-audio_no_clipbegin/OPS/nav.xhtml
+++ b/tests/mol-audio_no_clipbegin/OPS/nav.xhtml
@@ -1,6 +1,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="en">
   <head>
-    <title>Automatic start at the begining of an audio track</title>
+    <title>Automatic start at the beginning of an audio track</title>
   </head>
   <body>
     <nav epub:type="toc">
