Added exceeding clipend test

--- a/tests/mol-audio_exceeding_clipend/OPS/nav.xhtml
+++ b/tests/mol-audio_exceeding_clipend/OPS/nav.xhtml
@@ -1,6 +1,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="en">
   <head>
-    <title>Basic media overlay test</title>
+    <title>Rendering of an audio track stops at the end of it if the clipEnd attribute exceeds real length</title>
   </head>
   <body>
     <nav epub:type="toc">
