--- a/tests/mol-audio_no_clipbegin/OPS/mobydick.xhtml
+++ b/tests/mol-audio_no_clipbegin/OPS/mobydick.xhtml
@@ -3,6 +3,15 @@
 	<head>
         <meta charset="utf-8" />
 		<title>Automatic start at the beginning of an audio track</title>
+        <style>
+            .active-item {
+                background-color: #0d925f;
+                color: black;
+            }
+            .rendered-with-mo {
+                color: rgb(158,158,158);
+            }
+        </style>
     </head>
 	<body> 
     <section id="mobyexcerpt">
