--- a/tests/mol-css_classes/OPS/nav.xhtml
+++ b/tests/mol-css_classes/OPS/nav.xhtml
@@ -6,6 +6,7 @@
     <nav epub:type="toc">
       <ol>
         <li><a href="content_001.xhtml">Link to main page</a></li>
+        <li><a href="mobydick.xhtml">Link to main page</a></li>
       </ol>
     </nav>
   </body>
