Last check before submission

--- a/tests/mol-timing-synchronization/OPS/nav.xhtml
+++ b/tests/mol-timing-synchronization/OPS/nav.xhtml
@@ -5,8 +5,8 @@
   <body>
     <nav epub:type="toc">
       <ol>
-        <li><a href="content_001.xhtml">Link to main page</a></li>
-        <li><a href="mobydick.xhtml">Link to main page</a></li>
+        <li><a href="content_001.xhtml">Entry page</a></li>
+        <li><a href="mobydick.xhtml">Content with Media Overlay</a></li>
       </ol>
     </nav>
   </body>
