--- a/tests/mol-audio_exceeding_clipend/OPS/content_001.xhtml
+++ b/tests/mol-audio_exceeding_clipend/OPS/content_001.xhtml
@@ -2,18 +2,16 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
         <meta charset="utf-8" />
-		<title>Rendering of an audio track stops at the end of it if the clipEnd attribute exceeds real length</title>
+		<title>Ignoring clipEnd attribute if it exceeds track length</title>
 	</head>
 	<body>
 
-        <p>Test passes (i.e., the Reading System correcty implements the lack of a <code>clipEnd</code> attribute value) if</p>
+        <p>Test passes (i.e., the Reading System correctly implements the <code>clipEnd</code> value exceeding the end of the audio track) if</p>
 
         <ol>
             <li>The Reading System provides the user with a way to turn text reading on</li>
             <li>If turned on, the extract on the next page is read aloud by the Reading System</li>
-            <li>If the reading system highlights the active text, then the highlight stops at the second section</li>
-            <li>The full text is read</li>
+            <li>The full text is read without a significant gap between the first and the second paragraph</li>
         </ol>
- 
     </body>
 </html>
