--- a/tests/mol-audio_exceeding_clipend/OPS/mobydick.xhtml
+++ b/tests/mol-audio_exceeding_clipend/OPS/mobydick.xhtml
@@ -2,11 +2,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
         <meta charset="utf-8" />
-		<title>Rendering of an audio track stops at the end of it if the clipEnd attribute exceeds real length</title>
+		<title>Ignoring clipEnd attribute if it exceeds track length</title>
         <style>
             .active-item {
-                background-color: #0d925f;
-                color: black;
+                background-color: rgb(13,146,95);
+                color: rgb(241, 241, 220);
             }
             .rendered-with-mo {
                 color: rgb(158,158,158);
