--- a/tests/mol-audio_no_clipbegin/OPS/mobydick.xhtml
+++ b/tests/mol-audio_no_clipbegin/OPS/mobydick.xhtml
@@ -5,8 +5,8 @@
 		<title>Automatic start at the beginning of an audio track</title>
         <style>
             .active-item {
-                background-color: #0d925f;
-                color: black;
+                background-color: rgb(13,146,95);
+                color: rgb(241, 241, 220);
             }
             .rendered-with-mo {
                 color: rgb(158,158,158);
