--- a/tests/mol-audio_exceeding_clipend/OPS/nav.xhtml
+++ b/tests/mol-audio_exceeding_clipend/OPS/nav.xhtml
@@ -1,12 +1,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="en">
   <head>
-    <title>Rendering of an audio track stops at the end of it if the clipEnd attribute exceeds real length</title>
+    <title>Ignoring clipEnd attribute if it exceeds track length</title>
   </head>
   <body>
     <nav epub:type="toc">
       <ol>
-        <li><a href="content_001.xhtml">Link to main page</a></li>
-        <li><a href="mobydick.xhtml">Link to main page</a></li>
+        <li><a href="content_001.xhtml">Entry page</a></li>
+        <li><a href="mobydick.xhtml">Content with Media Overlay</a></li>
       </ol>
     </nav>
   </body>
