--- a/tests/mol-audio_no_clipbegin/OPS/content_001.xhtml
+++ b/tests/mol-audio_no_clipbegin/OPS/content_001.xhtml
@@ -11,7 +11,7 @@
         <ol>
             <li>The Reading System provides the user with a way to turn text reading on</li>
             <li>If turned on, the extract on the next page is read aloud by the Reading System</li>
-            <li>The text does <em>not</em> start at the beginning of the text but at the title and the preamble of the audio recording.</li>
+            <li>The text does <em>not</em> start at the beginning of the text but at the title of the publication, name of the reader, etc.</li>
         </ol>
  
     </body>
