--- a/tests/mol-audio_no_clipend/OPS/content_001.xhtml
+++ b/tests/mol-audio_no_clipend/OPS/content_001.xhtml
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 
-        <p>Test passes (i.e., the Reading System correcty implements the lack of a <code>clipEnd</code> attribute value) if</p>
+        <p>Test passes (i.e., the Reading System correctly implements the lack of a <code>clipEnd</code> attribute value) if</p>
 
         <ol>
             <li>The Reading System provides the user with a way to turn text reading on</li>
