--- a/tests/mol-css_classes/OPS/mobydick.xhtml
+++ b/tests/mol-css_classes/OPS/mobydick.xhtml
@@ -4,9 +4,9 @@
         <meta charset="utf-8" />
 		<title>Basic media overlay test with CSS styling</title>
         <style>
-            .active-item {
-                background-color: #0d925f;
-                color: black;
+           .active-item {
+                background-color: rgb(13,146,95);
+                color: rgb(241, 241, 220);
             }
             .rendered-with-mo {
                 color: rgb(158,158,158);
