--- a/tests/mol-css_classes/OPS/nav.xhtml
+++ b/tests/mol-css_classes/OPS/nav.xhtml
@@ -4,10 +4,8 @@
   </head>
   <body>
     <nav epub:type="toc">
-      <ol>
-        <li><a href="content_001.xhtml">Link to main page</a></li>
-        <li><a href="mobydick.xhtml">Link to main page</a></li>
-      </ol>
-    </nav>
+      <li><a href="content_001.xhtml">Entry page</a></li>
+      <li><a href="mobydick.xhtml">Content with Media Overlay</a></li>
+  </nav>
   </body>
 </html>
