--- a/tests/mol-timing-synchronization_svg/OPS/content_001.xhtml
+++ b/tests/mol-timing-synchronization_svg/OPS/content_001.xhtml
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
         <meta charset="utf-8" />
-		<title>Media overlay and SVG</title>
+		<title>Basic media overlay test in SVG</title>
 	</head>
 	<body>
 
@@ -11,7 +11,7 @@
         <ol>
             <li>The Reading System provides the user with a way to turn text reading on</li>
             <li>If turned on, the extract on the next (SVG) page is read aloud by the Reading System</li>
-            <li>The text being read is highlighted with a green background; the rest of the text is grayed out.</li>
+            <li>If the Reading System implements the association with style information, the text being read is highlighted with a green background and the rest of the text is grayed out</li>
         </ol>
  
     </body>
