--- a/tests/mol-timing-synchronization_fxl/OPS/content_001.xhtml
+++ b/tests/mol-timing-synchronization_fxl/OPS/content_001.xhtml
@@ -1,18 +1,14 @@
-<?xml version="1.0" encoding="utf-8"?>
 <html xmlns="http://www.w3.org/1999/xhtml">
-	<head>
-        <meta charset="utf-8" />
-		<title>Media overlay and fixed layout</title>
-        <meta name="viewport" content="width=900, height=600" />
-	</head>
-	<body>
-
-        <p>Test passes (i.e., the Reading System correctly implements Media Overlays on Fixed Layout publications) if</p>
-
-        <ol>
-            <li>The Reading System provides the user with a way to turn text reading on</li>
-            <li>If turned on, the extract on the next pages are read aloud by the Reading System</li>
-        </ol>
- 
-    </body>
+<head>
+    <title>Media overlay and fixed layout</title>
+    <meta name="viewport" content="width=900, height=600" />
+</head>
+<body>
+    <p>Test passes (i.e., the Reading System correctly implements Media Overlays on Fixed Layout publications) if</p>
+    <ol>
+        <li>The Reading System provides the user with a way to turn text reading on</li>
+        <li>If turned on, the extracts on the next pages are read aloud by the Reading System</li>
+        <li>If the Reading System implements the association with style information, the text being read is highlighted with a green background and the rest of the text is grayed out</li>
+    </ol>
+</body>
 </html>
