--- a/tests/mol-timing-synchronization_fxl/OPS/nav.xhtml
+++ b/tests/mol-timing-synchronization_fxl/OPS/nav.xhtml
@@ -1,6 +1,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="en">
   <head>
-    <title>Basic media overlay test on a fixed layout publication</title>
+    <title>Basic media overlay test in a fixed layout publication</title>
   </head>
   <body>
     <nav epub:type="toc">
