--- a/tests/mol-timing-synchronization_fxl/OPS/page_002.xhtml
+++ b/tests/mol-timing-synchronization_fxl/OPS/page_002.xhtml
@@ -1,6 +1,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="en">
   <head>
-    <title>Media overlay and fixed layout</title>
+    <title>Basic media overlay test in a fixed layout publication</title>
     <meta name="viewport" content="width=900, height=600" />
     <link rel="stylesheet" href="fixed.css" />
   </head>
