Put IDs on body and update SMIL textref values
This isn't required as per the spec but it makes EPUBCheck happier

--- a/tests/mol-navigation/EPUB/ch1.xhtml
+++ b/tests/mol-navigation/EPUB/ch1.xhtml
@@ -4,7 +4,7 @@
         <title>Chapter 1</title>
         <link rel="stylesheet" type="text/css" href="css/base.css"/>
     </head>
-    <body>
+    <body id="body">
         <h1 id="mo-1">Chapter 1</h1>
         <p id="mo-2">While this page is playing, open the table of contents and navigate to Chapter 2.</p>
         <p id="mo-3">Some filler text below ensures that there is enough time to do so.</p>
