--- a/tests/mol-navigation/EPUB/ch2.xhtml
+++ b/tests/mol-navigation/EPUB/ch2.xhtml
@@ -4,7 +4,7 @@
         <title>Chapter 2</title>
         <link rel="stylesheet" type="text/css" href="css/base.css"/>
     </head>
-    <body>
+    <body id="body">
         <h1 id="mo-1">Chapter 2</h1>
         <p id="mo-2">This page should play when "Chapter 2" is selected from the table of contents.</p>
     </body>
