--- a/tests/mol-rendering-audio/EPUB/clip_times_tests.xhtml
+++ b/tests/mol-rendering-audio/EPUB/clip_times_tests.xhtml
@@ -4,7 +4,7 @@
         <title>EPUB Media Overlays Tests: Rendering Audio</title>
         <link rel="stylesheet" type="text/css" href="css/base.css"/>
     </head>
-    <body>
+    <body id="body">
         <h1>EPUB Media Overlays Tests: Rendering Audio</h1>
         <p>Each sentence below should play in full when this page is played.</p>
         <ul>
