Change test statement wording to match "The test passes if..." format

--- a/tests/mol-navigation/EPUB/ch2.xhtml
+++ b/tests/mol-navigation/EPUB/ch2.xhtml
@@ -8,7 +8,7 @@
 
     <body id="body">
         <h1 id="mo-1">Chapter 2</h1>
-        <p id="mo-2">This page should play when "Chapter 2" is selected from the table of contents.</p>
+        <p id="mo-2">The test passes if this page plays when "Chapter 2" is selected from the table of contents.</p>
     </body>
 
 </html>
