--- a/tests/mol-tts_multi/EPUB/content_001.xhtml
+++ b/tests/mol-tts_multi/EPUB/content_001.xhtml
@@ -5,7 +5,7 @@
     <title>Multiple text-to-speech fallback for MO</title>
 </head>
 <body>
-    <p>Test passes (i.e., the Reading System correctly falls back on Text-to-Speech when no audio file is present) if</p>
+    <p>Test passes (i.e., the Reading System correctly falls back to its own Text-to-Speech system when no audio file is present) if</p>
     <ol>
         <li>The Reading System provides the user with a way to turn text reading on</li>
         <li>If turned on, the extract on the next page is read aloud by the Reading System using Text-to-Speech</li>
