Took care of Dan's comments

--- a/tests/mol-tts_multi/EPUB/nav.xhtml
+++ b/tests/mol-tts_multi/EPUB/nav.xhtml
@@ -1,6 +1,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="en">
   <head>
-    <title>Multiple text-to-speech fallback for MO</title>
+    <title>Text-to-speech fallback for multiple fragments</title>
   </head>
   <body>
     <nav epub:type="toc">
