--- a/tests/mol-tts_single/EPUB/mobydick.xhtml
+++ b/tests/mol-tts_single/EPUB/mobydick.xhtml
@@ -1,7 +1,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title>Single text-to-speech fallback for MO</title>
+    <title>Text-to-speech fallback for a single fragment</title>
     <style>
         .active-item {
             background-color: rgb(13, 146, 95);
