--- a/tests/mol-embed/EPUB/nav.xhtml
+++ b/tests/mol-embed/EPUB/nav.xhtml
@@ -6,7 +6,7 @@
     <nav epub:type="toc">
       <ol>
         <li><a href="content_001.xhtml">Starting page</a></li>  
-        <li><a href="video.xhtml">Content with Media Overlay with videos</a></li>  
+        <li><a href="video.xhtml">Content with media overlay with videos</a></li>  
       </ol>
   </nav>
   </body>
