--- a/tests/mol-embed/EPUB/video.xhtml
+++ b/tests/mol-embed/EPUB/video.xhtml
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
         <meta charset="utf-8" />
-		<title>Media Overlay with embedded video</title>
+		<title>Media overlay with embedded video</title>
         <style>
             video {
                 padding: 35px;
