--- a/tests/mol-embed/EPUB/content_001.xhtml
+++ b/tests/mol-embed/EPUB/content_001.xhtml
@@ -25,7 +25,7 @@
             <li>The Reading System provides the user with a way to turn sound on</li>
             <li>On the next page, if sound is turned on, the audio (music) plays and the first video starts automatically</li>
             <li>After 30 seconds the first video stops and the second starts while the music plays for another 10 seconds</li>
-            <li>If the Reading System implements the association with style, the active video is includes in a green frame</li>
+            <li>If the Reading System implements styling for media overlays, the active video is framed in green</li>
         </ol>
     </body>
 </html>
