Took care of Dan's comments

--- a/tests/mol-embed_fxl/EPUB/video_1.xhtml
+++ b/tests/mol-embed_fxl/EPUB/video_1.xhtml
@@ -8,7 +8,7 @@
     </head>
 	<body id="body"> 
         <div class="video_container">
-            <video width="800" controls="" id="video_1">
+            <video width="800" id="video_1">
                 <source src="video/video_1.mp4" type="video/mp4" />
                 Your Reading System cannot display the video
             </video>
