--- a/tests/mol-embed/EPUB/video.xhtml
+++ b/tests/mol-embed/EPUB/video.xhtml
@@ -19,13 +19,13 @@
     </head>
 	<body id="body"> 
         <div class="video_container">
-            <video width="800" controls="" id="video_1">
+            <video width="800" id="video_1">
                 <source src="video/video_1.mp4" type="video/mp4" />
                 Your Reading System cannot display the video
             </video>
         </div>
         <div class="video_container">
-            <video width="800" controls="" id="video_2">
+            <video width="800" id="video_2">
                 <source src="video/video_2.mp4" type="video/mp4" />
                 Your Reading System cannot display the video
             </video>
