Updated the origin reference and check for "null"

--- a/tests/ocf-url_origin/EPUB/content_001.xhtml
+++ b/tests/ocf-url_origin/EPUB/content_001.xhtml
@@ -9,7 +9,8 @@
                 try {
                     document.getElementById('no_scripting').style.display = 'none';
                     document.getElementById('scripting').style.display = 'block';
-                    document.getElementById('origin').textContent = document.location.origin;
+                    const origin = self.origin;
+                    document.getElementById('origin').textContent = origin === "null" || origin === null ? "opaque" : origin;
                 } catch(e) {
                     alert(e)
                 }
